<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="8dp">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/midnight_blue"
        android:indeterminateOnly="true"
        android:indeterminateBehavior="cycle"
        android:visibility="gone"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvDeviceName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@id/deviceName"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/deviceName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Xerox"
        android:textSize="28sp"
        android:textColor="@color/midnight_blue"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/progressBar"
        app:layout_constraintStart_toEndOf="@id/tvDeviceName"/>


    <TextView
        android:id="@+id/tvLocationId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_id"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@id/locationId"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/locationId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="baifgba29egfb"
        android:textSize="28sp"
        android:textColor="@color/midnight_blue"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/deviceName"
        app:layout_constraintStart_toEndOf="@id/tvLocationId"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dateInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/last_repaire_date"
        app:hintTextColor="@color/midnight_blue"
        app:boxStrokeColor="@color/midnight_blue"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/locationId"
        app:startIconDrawable="@drawable/ic_date">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDate"
            android:textColor="@color/midnight_blue"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/report"
        android:textSize="22sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/dateInput"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/etReport"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:gravity="start"
        android:padding="8dp"
        android:background="@drawable/tv_frame"
        app:layout_constraintTop_toBottomOf="@id/tvReport"
        app:layout_constraintBottom_toTopOf="@id/btnUpdate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="This is testing text."/>

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:textSize="22sp"
        android:textAllCaps="false"
        android:backgroundTint="@color/midnight_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>